compiler/testData/diagnostics/tests/cast/bare/ToErrorType.fir.kt
class P

fun foo(p: P): Any {
    konst v = p as <!UNRESOLVED_REFERENCE!>G<!>
    return v
}